# utility-server

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.base  README.md
config/: .bash_profile.example  .bashrc.example  .sudo-passwd.example  docker-entrypoint.sh  sshd_config.example
config/.aws/: config.example
config/.ssh/: authorized_keys.example  config.example
old-bin/: build  init  push
src/: main.rs
src/utlsrv/: lib.rs
templates/docker/: Dockerfile.base  docker-entrypoint.sh.example
templates/homedir/: irbrc.example  npmrc.example  profile.example  pryrc.example
