[package]
name = "utlsrv"
version = "0.1.0"
keywords = ["docker", "ecs", "ecr", "aws", "ssh", "mosh"]
license = "GPL-3.0"
authors = ["Carsten Nielsen <heycarsten@gmail.com>"]
description = """
A command-line tool for deploying a personal utility server to Amazon ECS
"""
exclude = []

[lib]
name = "utlsrv"
path = "src/utlsrv/lib.rs"

[[bin]]
name = "utlsrv"
test = false
doc = false

[dependencies]
semver = "0.9.0"
clap = "2.32.0"
handlebars = "1.1.0"
shiplift = "0.4.0"
rusoto_core = "0.36.0"
rusoto_ecs = "0.36.0"
rusoto_ecr = "0.36.0"
